--- a/maguilop/composer.json
+++ b/maguilop/composer.json
@@ -21,13 +21,16 @@
         "nunomaduro/collision": "^8.6",
         "phpunit/phpunit": "^11.5.3"
     },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
+"autoload": {
+    "psr-4": {
+        "App\\": "app/",
+        "Database\\Factories\\": "database/factories/",
+        "Database\\Seeders\\": "database/seeders/"
     },
+    "files": [
+        "app/Helpers/PermisosHelper.php"
+    ]
+},
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
